ajout test unitaire service medical record