@@ -1,73 +1,102 @@
 package org.medilabo.medical_record_service.services;
 
+
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.medilabo.medical_record_service.dtos.HistoricalDto;
+import org.medilabo.medical_record_service.dtos.MedicalHistoricalDto;
 import org.medilabo.medical_record_service.entities.MedicalRecord;
 import org.medilabo.medical_record_service.entities.PatientLocal;
 import org.medilabo.medical_record_service.repositories.MedicalRecordRepository;
-import org.medilabo.medical_record_service.repositories.PatientLocalRepository;
-import org.medilabo.medical_record_service.services.interfaces.IMedicalRecord;
 import org.medilabo.medical_record_service.services.interfaces.IPatientLocal;
-import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.boot.test.context.SpringBootTest;
+import org.mockito.InjectMocks;
+import org.mockito.Mock;
+import org.mockito.junit.jupiter.MockitoExtension;
+import org.modelmapper.ModelMapper;
 
 import java.time.LocalDateTime;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.when;
 
-@SpringBootTest
+@ExtendWith(MockitoExtension.class)
 class MedicalRecordServiceImplTest {
-    @Autowired
-    private IMedicalRecord medicalHistoryService;
+    @Mock
+    private MedicalRecordRepository medicalRepository;
 
-    @Autowired
-    private MedicalRecordRepository medicalRecordRepository;
+    @Mock
+    private ModelMapper modelMapper;
 
-    @Autowired
-    private PatientLocalRepository patientService;
+    @Mock
+    private IPatientLocal patientService;
 
-    private Long patientId;
+    @InjectMocks
+    private MedicalRecordServiceImpl medicalRecordService;
+
+    private PatientLocal patientLocal;
+    private MedicalRecord medicalRecord;
+    private MedicalHistoricalDto medicalHistoricalDto;
 
     @BeforeEach
     public void setUp() {
-        patientId = generateId();
-        System.out.println("ID : "+ patientId);
-        PatientLocal patientLocal = new PatientLocal(patientId, "Doe");
-        patientService.save(patientLocal);
+        patientLocal = new PatientLocal();
+        patientLocal.setId(1L);
+        patientLocal.setLastName("Doe");
 
-        MedicalRecord record1 = MedicalRecord.builder()
-                .note("Diagnosis 1")
-                .createdAt(LocalDateTime.now())
-                .createdBy("Praticien 1")
-                .patientId(patientId)
-                .build();
-        medicalRecordRepository.save(record1);
+        medicalRecord = new MedicalRecord();
+        medicalRecord.setId("1L");
+        medicalRecord.setNote("Note test");
+        medicalRecord.setCreatedBy("Dr Test");
+        medicalRecord.setCreatedAt(LocalDateTime.now());
+        medicalRecord.setPatientId(1L);
 
-        MedicalRecord record2 = MedicalRecord.builder()
-                .note("Diagnosis 2")
-                .createdAt(LocalDateTime.now())
-                .createdBy("Praticien 1")
-                .patientId(patientId)
-                .build();
-        medicalRecordRepository.save(record2);
+        medicalHistoricalDto = new MedicalHistoricalDto();
+        medicalHistoricalDto.setId("1L");
+        medicalHistoricalDto.setNote("Note test");
     }
 
     @Test
-    @Disabled
-    public void testGetMedicalHistoryByPatientId() {
-        HistoricalDto result = medicalHistoryService.getMedicalHistoryByPatientId(patientId);
+    void getMedicalHistoryByPatientIdShouldReturnHistoricalDto() {
+        when(patientService.getPatientLocalById(1L)).thenReturn(patientLocal);
+        when(medicalRepository.findByPatientId(1L)).thenReturn(List.of(medicalRecord));
+        when(modelMapper.map(any(MedicalRecord.class), eq(MedicalHistoricalDto.class)))
+                .thenReturn(medicalHistoricalDto);
+
+        HistoricalDto result = medicalRecordService.getMedicalHistoryByPatientId(1L);
 
         assertNotNull(result);
-        assertEquals(patientId, result.getPatient().getId());
-        assertEquals(2, result.getMedicalHistoricalDtos().size());
-        assertEquals("Diagnosis 1", result.getMedicalHistoricalDtos().get(0).getNote());
-        assertEquals("Diagnosis 2", result.getMedicalHistoricalDtos().get(1).getNote());
+        assertEquals(patientLocal, result.getPatient());
+        assertEquals(1, result.getMedicalHistoricalDtos().size());
+        assertEquals("Note test", result.getMedicalHistoricalDtos().getFirst().getNote());
     }
 
-    public Long generateId() {
-        return System.currentTimeMillis();
+    @Test
+    void shouldAddNoteAndReturnHistoricalDto() {
+        when(patientService.getPatientLocalById(1L)).thenReturn(patientLocal);
+        when(medicalRepository.findByPatientId(1L)).thenReturn(List.of(medicalRecord));
+        when(modelMapper.map(any(MedicalRecord.class), eq(MedicalHistoricalDto.class)))
+                .thenReturn(medicalHistoricalDto);
+
+        HistoricalDto result = medicalRecordService.addNewNote(1L, medicalHistoricalDto);
+
+        assertNotNull(result);
+        assertEquals(patientLocal, result.getPatient());
+    }
+
+    @Test
+    void shouldReturnEmptyListIfNoRecord() {
+        when(patientService.getPatientLocalById(1L)).thenReturn(patientLocal);
+        when(medicalRepository.findByPatientId(1L)).thenReturn(List.of());
+
+        HistoricalDto result = medicalRecordService.getMedicalHistoryByPatientId(1L);
+
+        assertNotNull(result);
+        assertEquals(patientLocal, result.getPatient());
+        assertTrue(result.getMedicalHistoricalDtos().isEmpty());
     }
 
 }
